# kani

./: .gitignore  Cargo.toml  README.ja.md  README.md
.github/workflows/: ci.yml
crates/kani-app/: Cargo.toml
crates/kani-app/src/: kvm_engine.rs  lib.rs  main.rs  server.rs
crates/kani-app/tests/: integration.rs  loopback.rs  mvp_acceptance.rs
crates/kani-clipboard/: Cargo.toml
crates/kani-clipboard/src/: lib.rs  monitor.rs  sync.rs
crates/kani-core/: Cargo.toml
crates/kani-core/src/: crossing.rs  cursor.rs  lib.rs  state.rs
crates/kani-gui/: Cargo.toml  build.rs
crates/kani-gui/src/: app.rs  border_gen.rs  canvas.rs  client_agent.rs  config_io.rs  footer.rs  icon.rs  main.rs  model.rs  tray.rs  unified_server.rs
crates/kani-gui/src/tabs/: display.rs  settings.rs
crates/kani-platform/: Cargo.toml
crates/kani-platform/src/: lib.rs  types.rs
crates/kani-platform/src/macos/: cursor.rs  display.rs  input.rs  mod.rs  permissions.rs  wake.rs
crates/kani-platform/src/windows/: cursor.rs  display.rs  grab.rs  input.rs  mod.rs
crates/kani-proto/: Cargo.toml
crates/kani-proto/src/: clipboard.rs  codec.rs  config.rs  event.rs  keymap.rs  lib.rs  modifier_remap.rs  topology.rs
crates/kani-transport/: Cargo.toml
crates/kani-transport/src/: connection.rs  dtls.rs  lib.rs  tls_tcp.rs  udp.rs
examples/: kani-example.toml
poc/dtls-poc/: Cargo.toml
poc/dtls-poc/src/: main.rs
poc/macos-input-poc/: Cargo.toml
poc/macos-input-poc/src/: main.rs
poc/windows-input-poc/: Cargo.toml
poc/windows-input-poc/src/: main.rs
scripts/: build-mac-app.sh
tests/: e2e_mouse_inject.ps1
