[package]
name = "kani-clipboard"
version.workspace = true
edition.workspace = true

[dependencies]
kani-proto = { path = "../kani-proto" }
kani-transport = { path = "../kani-transport" }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
uuid = { workspace = true }
