[package]
name = "kani-proto"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
bincode = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
