[package]
name = "kani-transport"
version.workspace = true
edition.workspace = true

[dependencies]
kani-proto = { path = "../kani-proto" }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
webrtc-dtls = { workspace = true }
webrtc-util = { workspace = true }
rcgen = { workspace = true }
ring = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
